@@ -1,9 +1,11 @@
 package com.blazemeter.jmeter.http2.core;
 
+import com.blazemeter.jmeter.http2.core.utils.CacheManagerJettyHelper;
 import com.blazemeter.jmeter.http2.sampler.HTTP2Sampler;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.io.UnsupportedEncodingException;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
@@ -11,19 +13,21 @@ import java.net.URLDecoder;
 import java.nio.charset.Charset;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 import java.util.HashSet;
 import java.util.Set;
-import java.util.Spliterator;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.http.client.methods.HttpRequestBase;
 import org.apache.jmeter.protocol.http.control.AuthManager;
 import org.apache.jmeter.protocol.http.control.AuthManager.Mechanism;
 import org.apache.jmeter.protocol.http.control.Authorization;
+import org.apache.jmeter.protocol.http.control.CacheManager;
 import org.apache.jmeter.protocol.http.control.CookieManager;
 import org.apache.jmeter.protocol.http.control.Header;
 import org.apache.jmeter.protocol.http.control.HeaderManager;
@@ -49,10 +53,13 @@ import org.eclipse.jetty.client.util.AbstractAuthentication;
 import org.eclipse.jetty.client.util.BasicAuthentication;
 import org.eclipse.jetty.client.util.DigestAuthentication;
 import org.eclipse.jetty.client.util.FormRequestContent;
+import org.eclipse.jetty.client.util.MultiPartRequestContent;
 import org.eclipse.jetty.client.util.PathRequestContent;
 import org.eclipse.jetty.client.util.StringRequestContent;
 import org.eclipse.jetty.http.HttpField;
 import org.eclipse.jetty.http.HttpFields;
+import org.eclipse.jetty.http.HttpHeader;
+import org.eclipse.jetty.http.HttpStatus;
 import org.eclipse.jetty.http2.client.HTTP2Client;
 import org.eclipse.jetty.http2.client.http.ClientConnectionFactoryOverHTTP2;
 import org.eclipse.jetty.io.ClientConnector;
@@ -72,6 +79,9 @@ public class HTTP2JettyClient {
   private static final boolean ADD_CONTENT_TYPE_TO_POST_IF_MISSING = JMeterUtils.getPropDefault(
       "http.post_add_content_type_if_missing", false);
   private static final Pattern PORT_PATTERN = Pattern.compile("\\d+");
+  private static final String MULTI_PART_SEPARATOR = "--";
+  private static final String LINE_SEPARATOR = "\r\n";
+  private static final String DEFAULT_FILE_MIME_TYPE = "application/octet-stream";
   private final HttpClient httpClient;
 
   public HTTP2JettyClient() {
@@ -86,29 +96,38 @@ public class HTTP2JettyClient {
     this.httpClient = new HttpClient(transport);
   }
 
+  public void start() throws Exception {
+    if (!httpClient.isStarted()) {
+      httpClient.start();
+    }
+  }
+
+  public void stop() throws Exception {
+    httpClient.stop();
+  }
+
   public HTTPSampleResult sample(HTTP2Sampler sampler, URL url, String method,
       boolean areFollowingRedirect, int depth)
-      throws URISyntaxException, IOException, InterruptedException,
-      ExecutionException, TimeoutException {
-    HTTPSampleResult result = new HTTPSampleResult();
-    result.setSampleLabel(getSampleLabel(url, sampler));
-    result.setHTTPMethod(method);
-    result.setURL(url);
+      throws URISyntaxException, IOException, InterruptedException, ExecutionException,
+      TimeoutException {
 
     if (!sampler.getProxyHost().isEmpty()) {
       setProxy(sampler.getProxyHost(), sampler.getProxyPortInt(), sampler.getProxyScheme());
     }
 
     setAuthManager(sampler);
-    result.sampleStart();
-    HttpRequest request = createRequest(url, result);
 
+    HTTPSampleResult result = buildResult(sampler, url, method);
+    HttpRequest request = buildRequest(url, result);
     setTimeouts(sampler, request);
-    request.followRedirects(false);
+    request.followRedirects(sampler.getAutoRedirects());
     request.method(method);
 
-    if (sampler.getHeaderManager() != null) {
-      setHeaders(request, sampler.getHeaderManager(), url);
+    CacheManager cacheManager = sampler.getCacheManager();
+    setHeaders(request, sampler.getHeaderManager(), url, cacheManager);
+    if (cacheManager != null && HTTPConstants.GET.equalsIgnoreCase(method) && cacheManager.inCache(
+        url, CacheManagerJettyHelper.convertJettyHeadersToApacheHeaders(request.getHeaders()))) {
+      return CacheManagerJettyHelper.updateSampleResultForResourceInCache(result);
     }
 
     CookieManager cookieManager = sampler.getCookieManager();
@@ -118,37 +137,50 @@ public class HTTP2JettyClient {
 
     setBody(request, sampler, result);
     if (!isSupportedMethod(method)) {
-      throw new UnsupportedOperationException(
-          String.format("Method %s is not supported", method));
-    } else {
-      ContentResponse contentResponse = request.send();
-      saveCookiesInCookieManager(contentResponse, url, sampler.getCookieManager());
-      setResultContentResponse(result, contentResponse, sampler);
-      result.sampleEnd();
-      if (result.isRedirect()) {
-        String redirectLocation = contentResponse.getHeaders() != null
-            ? contentResponse.getHeaders().get(HTTPConstants.HEADER_LOCATION)
-            : null;
-        if (redirectLocation == null) {
-          throw new IllegalArgumentException("Missing location header in redirect");
-        }
-        result.setRedirectLocation(redirectLocation);
-      }
+      throw new UnsupportedOperationException(String.format("Method %s is not supported", method));
     }
 
-    result.setRequestHeaders(getHeadersAsString(request.getHeaders()));
-    result = sampler.resultProcessing(areFollowingRedirect, depth, result);
+    result.sampleStart();
+    ContentResponse contentResponse = request.send();
+    result.sampleEnd();
+
+    saveCookiesInCookieManager(contentResponse, url, sampler.getCookieManager());
+    setResultContentResponse(result, contentResponse, sampler);
+
+    if (result.isRedirect()) {
+      String redirectLocation = contentResponse.getHeaders() != null
+          ? contentResponse.getHeaders().get(HTTPConstants.HEADER_LOCATION)
+          : null;
+      if (redirectLocation == null) {
+        throw new IllegalArgumentException("Missing location header in redirect");
+      }
+      result.setRedirectLocation(redirectLocation);
+    }
+
+    if (cacheManager != null) {
+      cacheManager.saveDetails(CacheManagerJettyHelper
+          .createApacheHttpResponseFromJettyContentResponse(contentResponse), result);
+    }
+
+    result.setRequestHeaders(buildHeadersString(request.getHeaders()));
+    return sampler.resultProcessing(areFollowingRedirect, depth, result);
+  }
+
+  private HTTPSampleResult buildResult(HTTP2Sampler sampler, URL url, String method) {
+    HTTPSampleResult result = new HTTPSampleResult();
+    result.setSampleLabel(getSampleLabel(url, sampler));
+    result.setHTTPMethod(method);
+    result.setURL(url);
     return result;
   }
 
-  private String getHeadersAsString(HttpFields headers) {
-    if (headers == null) {
-      return "";
-    } else {
-      return headers.stream().filter(h -> !h.getName().equals(HTTPConstants.HEADER_COOKIE))
-          .map(h -> h.getName() + ": " + h.getValue()).collect(Collectors.joining("\r\n"))
-          + "\r\n\r\n";
-    }
+  private boolean isSupportedMethod(String method) {
+    return SUPPORTED_METHODS.contains(method);
+  }
+
+  private String buildHeadersString(HttpFields headers) {
+    return headers == null ? ""
+        : HttpFields.build(headers).remove(HTTPConstants.HEADER_COOKIE).toString();
   }
 
   private void saveCookiesInCookieManager(ContentResponse response, URL url,
@@ -175,28 +207,31 @@ public class HTTP2JettyClient {
     httpClient.getProxyConfiguration().getProxies().add(proxy);
   }
 
-  private HttpRequest createRequest(URL url, HTTPSampleResult result) throws URISyntaxException,
+  private HttpRequest buildRequest(URL url, HTTPSampleResult result) throws URISyntaxException,
       IllegalArgumentException {
     Request request = httpClient.newRequest(url.toURI());
-    if (request instanceof HttpRequest && result != null) {
-      HttpRequest httpRequest = (HttpRequest) request;
-      httpRequest.onRequestBegin(l -> result.connectEnd());
-      httpRequest.onResponseBegin(l -> result.latencyEnd());
-      return httpRequest;
-    } else {
+    if (!(request instanceof HttpRequest) || result == null) {
       throw new IllegalArgumentException("HttpRequest is expected");
     }
+    HttpRequest httpRequest = (HttpRequest) request;
+    httpRequest.onRequestBegin(l -> result.connectEnd());
+    httpRequest.onResponseBegin(l -> result.latencyEnd());
+    return httpRequest;
   }
 
   private void setAuthManager(HTTP2Sampler sampler) {
-
     AuthManager authManager = sampler.getAuthManager();
     if (authManager != null) {
-      StreamSupport.stream(authManagerToSpliterator(authManager), false)
-          .map(this::getAuthorizationObjectFromProperty)
-          .filter(auth -> isSupportedMechanism(auth) && isNotEmptyURL(auth))
+      StreamSupport.stream(authManager.getAuthObjects().spliterator(), false)
+          .map(j -> (Authorization) j.getObjectValue())
+          .filter(auth -> isSupportedMechanism(auth) && !StringUtils.isEmpty(auth.getURL()))
           .forEach(this::addAuthenticationToJettyClient);
     }
+  }
+
+  private boolean isSupportedMechanism(Authorization auth) {
+    String authName = auth.getMechanism().name();
+    return authName.equals(Mechanism.BASIC.name()) || authName.equals(Mechanism.DIGEST.name());
   }
 
   private void addAuthenticationToJettyClient(Authorization auth) {
@@ -217,42 +252,18 @@ public class HTTP2JettyClient {
     }
   }
 
-  private boolean isSupportedMechanism(Authorization auth) {
-    String authName = auth.getMechanism().name();
-    return authName.equals(Mechanism.BASIC.name()) || authName.equals(Mechanism.DIGEST.name());
-  }
-
-  private Spliterator<JMeterProperty> authManagerToSpliterator(AuthManager authManager) {
-    return authManager.getAuthObjects().spliterator();
-  }
-
-  private Authorization getAuthorizationObjectFromProperty(JMeterProperty jMeterProperty) {
-    return (Authorization) jMeterProperty.getObjectValue();
-  }
-
-  private boolean isNotEmptyURL(Authorization authorization) {
-    return authorization.getURL() != null && !authorization.getURL().isEmpty();
-  }
-
-  public void start() throws Exception {
-    if (!httpClient.isStarted()) {
-      httpClient.start();
-    }
-  }
-
-  public void stop() throws Exception {
-    httpClient.stop();
-  }
-
   private void setResultContentResponse(HTTPSampleResult result, ContentResponse contentResponse,
       HTTP2Sampler sampler) throws IOException {
     result.setSuccessful(contentResponse.getStatus() >= 200 && contentResponse.getStatus() <= 399);
     result.setResponseCode(String.valueOf(contentResponse.getStatus()));
-    result
-        .setResponseMessage(contentResponse.getReason() != null ? contentResponse.getReason() : "");
+    String responseMessage = contentResponse.getReason() != null ? contentResponse.getReason()
+        : HttpStatus.getMessage(contentResponse.getStatus());
+    result.setResponseMessage(responseMessage);
+
     result.setResponseHeaders(contentResponse.getHeaders().asString());
 
     InputStream inputStream = new ByteArrayInputStream(contentResponse.getContent());
+    // When a resource is cached, the sample result is empty
     result.setResponseData(sampler.readResponse(result, inputStream,
         contentResponse.getContent().length));
 
@@ -264,106 +275,168 @@ public class HTTP2JettyClient {
       result.setEncodingAndType(contentType);
     }
 
-    // Set size for header and body (\r\r\n)
-    final long headerBytes =
+    long headerBytes =
         (long) result.getResponseHeaders().length()
             + (long) contentResponse.getHeaders().asString().length()
             + 1L
             + 2L;
     result.setHeadersSize((int) headerBytes);
+    result.setSentBytes(contentResponse.getRequest().getBody().getLength());
 
   }
 
   private void setBody(HttpRequest request, HTTP2Sampler sampler, HTTPSampleResult result)
       throws IOException {
-    final String contentEncoding = sampler.getContentEncoding();
-    Charset contentCharset =
-        !contentEncoding.isEmpty() ? Charset.forName(contentEncoding) : StandardCharsets.UTF_8;
+    String contentEncoding = sampler.getContentEncoding();
     String contentTypeHeader =
         request.getHeaders() != null ? request.getHeaders().get(HTTPConstants.HEADER_CONTENT_TYPE)
             : null;
     boolean hasContentTypeHeader = contentTypeHeader != null && contentTypeHeader.isEmpty();
     StringBuilder postBody = new StringBuilder();
-    Content requestContent;
-    if (!sampler.hasArguments() && sampler.getSendFileAsPostBody()) {
-      // Only one File support in not multipart scenario
-      final HTTPFileArg file = sampler.getHTTPFiles()[0];
-      if (sampler.getHTTPFiles().length > 1) {
-        LOG.info("Send multiples files is not currently supported, only first file will be "
-            + "sending");
-      }
-      String mimeTypeFile = null;
-      if (!hasContentTypeHeader) {
-        if (file.getMimeType() != null && !file.getMimeType().isEmpty()) {
-          mimeTypeFile = file.getMimeType();
-        } else if (ADD_CONTENT_TYPE_TO_POST_IF_MISSING) {
-          mimeTypeFile = HTTPConstants.APPLICATION_X_WWW_FORM_URLENCODED;
+    if (sampler.getUseMultipart()) {
+      MultiPartRequestContent multipartEntityBuilder = new MultiPartRequestContent();
+      String boundary = extractMultipartBoundary(multipartEntityBuilder);
+      Charset contentCharset =
+          buildCharsetOrDefault(contentEncoding, StandardCharsets.US_ASCII);
+      for (JMeterProperty jMeterProperty : sampler.getArguments()) {
+        HTTPArgument arg = (HTTPArgument) jMeterProperty.getObjectValue();
+        String parameterName = arg.getName();
+        if (!arg.isSkippable(parameterName)) {
+          postBody.append(
+              buildArgumentPartRequestBody(arg, contentCharset, contentEncoding, boundary));
+          multipartEntityBuilder.addFieldPart(parameterName,
+              new StringRequestContent(contentTypeHeader, arg.getValue(), contentCharset), null);
         }
       }
-      if (mimeTypeFile != null) {
-        request.addHeader(new HttpField(HTTPConstants.HEADER_CONTENT_TYPE, mimeTypeFile));
-        requestContent = new PathRequestContent(mimeTypeFile, Path.of(file.getPath()));
-      } else {
-        requestContent = new PathRequestContent(Path.of(file.getPath()));
+      Content[] fileBodies = new PathRequestContent[sampler
+          .getHTTPFiles().length];
+      // Cannot retrieve parts once added
+      for (int i = 0; i < sampler.getHTTPFiles().length; i++) {
+        final HTTPFileArg file = sampler.getHTTPFiles()[i];
+        if (StringUtils.isBlank(file.getParamName())) {
+          throw new IllegalStateException("Param name is blank");
+        }
+        String mimeTypeFile = extractFileMimeType(hasContentTypeHeader, file);
+        fileBodies[i] = new PathRequestContent(mimeTypeFile, Path.of(file.getPath()));
+        String fileName = Paths.get((file.getPath())).getFileName().toString();
+        postBody.append(buildFilePartRequestBody(file, fileName, boundary));
+        multipartEntityBuilder.addFilePart(file.getParamName(), fileName, fileBodies[i],
+            null);
       }
-      request.body(requestContent);
-      postBody.append("<actual file content, not shown here>");
+      postBody.append(MULTI_PART_SEPARATOR).append(boundary).append(MULTI_PART_SEPARATOR)
+          .append(LINE_SEPARATOR);
+      multipartEntityBuilder.close();
+      request.body(multipartEntityBuilder);
     } else {
-      if (!hasContentTypeHeader && ADD_CONTENT_TYPE_TO_POST_IF_MISSING) {
-        request.addHeader(new HttpField(HTTPConstants.HEADER_CONTENT_TYPE,
-            HTTPConstants.APPLICATION_X_WWW_FORM_URLENCODED));
-      }
-      if (sampler.getSendParameterValuesAsPostBody()) {
-        for (JMeterProperty jMeterProperty : sampler.getArguments()) {
-          HTTPArgument arg = (HTTPArgument) jMeterProperty.getObjectValue();
-          postBody.append(arg.getEncodedValue(contentCharset.name()));
+      if (!sampler.hasArguments() && sampler.getSendFileAsPostBody()) {
+        // Only one File support in not multipart scenario
+        final HTTPFileArg file = sampler.getHTTPFiles()[0];
+        if (sampler.getHTTPFiles().length > 1) {
+          LOG.info("Send multiples files is not currently supported, only first file will be "
+              + "sending");
         }
-        requestContent = new StringRequestContent(contentTypeHeader, postBody.toString(),
-            contentCharset);
+
+        String mimeTypeFile = extractFileMimeType(hasContentTypeHeader, file);
+        if (!DEFAULT_FILE_MIME_TYPE.equals(mimeTypeFile)) {
+          request.addHeader(new HttpField(HTTPConstants.HEADER_CONTENT_TYPE, mimeTypeFile));
+        }
+        Content requestContent = new PathRequestContent(mimeTypeFile, Path.of(file.getPath()));
         request.body(requestContent);
-      } else if (isMethodWithBody(sampler.getMethod())) {
-        Fields fields = new Fields();
-        for (JMeterProperty p : sampler.getArguments()) {
-          HTTPArgument arg = (HTTPArgument) p.getObjectValue();
-          String parameterName = arg.getName();
-          if (!arg.isSkippable(parameterName)) {
-            String parameterValue = arg.getValue();
-            if (!arg.isAlwaysEncoded()) {
-              // The FormRequestContent always urlencodes both name and value, in this case the
-              // value is already encoded by the user so is needed to decode the value now, so
-              // that when the httpclient encodes it, we end up with the same value as the user
-              // had entered.
-              parameterName = URLDecoder.decode(parameterName, contentCharset.name());
-              parameterValue = URLDecoder.decode(parameterValue, contentCharset.name());
-            }
-            fields.add(parameterName, parameterValue);
+        postBody.append("<actual file content, not shown here>");
+      } else {
+        if (!hasContentTypeHeader && ADD_CONTENT_TYPE_TO_POST_IF_MISSING) {
+          request.addHeader(new HttpField(HTTPConstants.HEADER_CONTENT_TYPE,
+              HTTPConstants.APPLICATION_X_WWW_FORM_URLENCODED));
+        }
+        Charset contentCharset = buildCharsetOrDefault(contentEncoding, StandardCharsets.UTF_8);
+        if (sampler.getSendParameterValuesAsPostBody()) {
+          for (JMeterProperty jMeterProperty : sampler.getArguments()) {
+            HTTPArgument arg = (HTTPArgument) jMeterProperty.getObjectValue();
+            postBody.append(arg.getEncodedValue(contentCharset.name()));
           }
+          Content requestContent = new StringRequestContent(contentTypeHeader, postBody.toString(),
+              contentCharset);
+          request.body(requestContent);
+        } else if (isMethodWithBody(sampler.getMethod())) {
+          Fields fields = new Fields();
+          for (JMeterProperty p : sampler.getArguments()) {
+            HTTPArgument arg = (HTTPArgument) p.getObjectValue();
+            String parameterName = arg.getName();
+            if (!arg.isSkippable(parameterName)) {
+              String parameterValue = arg.getValue();
+              if (!arg.isAlwaysEncoded()) {
+                // The FormRequestContent always urlencodes both name and value, in this case the
+                // value is already encoded by the user so is needed to decode the value now, so
+                // that when the httpclient encodes it, we end up with the same value as the user
+                // had entered.
+                parameterName = URLDecoder.decode(parameterName, contentCharset.name());
+                parameterValue = URLDecoder.decode(parameterValue, contentCharset.name());
+              }
+              fields.add(parameterName, parameterValue);
+            }
+          }
+          postBody.append(FormRequestContent.convert(fields));
+          request.body(new FormRequestContent(fields, contentCharset));
         }
-        requestContent = new FormRequestContent(fields, contentCharset);
-        postBody.append(FormRequestContent.convert(fields));
-        request.body(requestContent);
       }
-      result.setQueryString(postBody.toString());
     }
+    result.setQueryString(postBody.toString());
   }
 
-  private boolean isSupportedMethod(String method) {
-    return SUPPORTED_METHODS.contains(method);
+  private String extractFileMimeType(boolean hasContentTypeHeader, HTTPFileArg file) {
+    String ret = null;
+    if (!hasContentTypeHeader) {
+      if (file.getMimeType() != null && !file.getMimeType().isEmpty()) {
+        ret = file.getMimeType();
+      } else if (ADD_CONTENT_TYPE_TO_POST_IF_MISSING) {
+        ret = HTTPConstants.APPLICATION_X_WWW_FORM_URLENCODED;
+      }
+    }
+    return ret == null ? DEFAULT_FILE_MIME_TYPE : ret;
+  }
+
+  private String extractMultipartBoundary(MultiPartRequestContent multipartEntityBuilder) {
+    String contentType = multipartEntityBuilder.getContentType();
+    String boundaryParam = contentType.substring(contentType.indexOf(" ") + 1);
+    return boundaryParam.substring(boundaryParam.indexOf("=") + 1);
+  }
+
+  private Charset buildCharsetOrDefault(String contentEncoding, Charset defaultCharset) {
+    return !contentEncoding.isEmpty() ? Charset.forName(contentEncoding) : defaultCharset;
   }
 
   private boolean isMethodWithBody(String method) {
     return METHODS_WITH_BODY.contains(method);
   }
 
-  private void setHeaders(HttpRequest request, HeaderManager headerManager, URL url) {
-    StreamSupport.stream(headerManager.getHeaders().spliterator(), false)
-        .map(prop -> (Header) prop.getObjectValue())
-        .filter(header -> !HTTPConstants.HEADER_CONTENT_LENGTH.equalsIgnoreCase(header.getName()))
-        .forEach(header -> {
-          if (!header.getName().isEmpty()) {
-            request.addHeader(createJettyHeader(header, url));
-          }
-        });
+  private void setHeaders(HttpRequest request, HeaderManager headerManager, URL url,
+      CacheManager cacheManager) throws URISyntaxException {
+    if (headerManager != null) {
+      StreamSupport.stream(headerManager.getHeaders().spliterator(), false)
+          .map(prop -> (Header) prop.getObjectValue())
+          .filter(header -> (!header.getName().isEmpty()) && (!HTTPConstants.HEADER_CONTENT_LENGTH
+              .equalsIgnoreCase(header.getName())))
+          .forEach(header -> request.addHeader(createJettyHeader(header, url)));
+    }
+
+    if (cacheManager != null) {
+      URI uri = new URI(url.toString());
+      HttpRequestBase reqBase = CacheManagerJettyHelper
+          .createApacheHttpRequest(uri, request.getMethod());
+      cacheManager.setHeaders(url, reqBase);
+      if (reqBase.getFirstHeader(HTTPConstants.VARY) != null) {
+        request.addHeader(new HttpField(HTTPConstants.VARY,
+            reqBase.getFirstHeader(HTTPConstants.VARY).getValue()));
+      }
+      if (reqBase.getFirstHeader(HTTPConstants.IF_MODIFIED_SINCE) != null) {
+        request.addHeader(new HttpField(HTTPConstants.IF_MODIFIED_SINCE,
+            reqBase.getFirstHeader(HTTPConstants.IF_MODIFIED_SINCE).getValue()));
+      }
+      if (reqBase.getFirstHeader(HTTPConstants.IF_NONE_MATCH) != null) {
+        request.addHeader(new HttpField(HTTPConstants.IF_NONE_MATCH,
+            reqBase.getFirstHeader(HTTPConstants.IF_NONE_MATCH).getValue()));
+      }
+    }
   }
 
   private HttpField createJettyHeader(Header header, URL url) {
@@ -406,6 +479,32 @@ public class HTTP2JettyClient {
     if (sampler.getResponseTimeout() > 0) {
       request.timeout(sampler.getResponseTimeout(), TimeUnit.MILLISECONDS);
     }
+  }
+
+  private String buildArgumentPartRequestBody(HTTPArgument arg, Charset contentCharset,
+      String contentEncoding, String boundary) throws UnsupportedEncodingException {
+    String disposition = "name=\"" + arg.getEncodedName() + "\"";
+    String contentType = arg.getContentType() + "; charset=" + contentCharset.name();
+    String encoding = StringUtils.isNotBlank(contentEncoding) ? contentEncoding : "8bit";
+    return buildPartBody(boundary, disposition, contentType, encoding,
+        arg.getEncodedValue(contentCharset.name()));
+  }
+
+  private String buildPartBody(String boundary, String disposition, String contentType,
+      String encoding, String value) {
+    return MULTI_PART_SEPARATOR + boundary + LINE_SEPARATOR +
+        HttpFields.build()
+            .add("Content-Disposition", "form-data; " + disposition)
+            .add(HttpHeader.CONTENT_TYPE.toString(), contentType)
+            .add("Content-Transfer-Encoding", encoding)
+            .toString()
+        + value + LINE_SEPARATOR;
+  }
+
+  private String buildFilePartRequestBody(HTTPFileArg file, String fileName, String boundary) {
+    String disposition = "name=\"" + file.getParamName() + "\"; filename=\"" + fileName + "\"";
+    return buildPartBody(boundary, disposition, file.getMimeType(), "binary",
+        "<actual file content, not shown here>");
   }
 
 }
